# zordon-description

./: CMakeLists.txt  LICENSE  README.md  package.xml
gazebo/: zordon_materials.gazebo  zordon_physics.gazebo  zordon_plugins.gazebo
launch/: controller.launch  controller.yaml  display.launch  gazebo.launch
meshes/: back_carrier_1.stl  base_link.stl  camera_1.stl  carrier_back_1.stl  carrier_front_1.stl  front_carrier_1.stl  left_axis_1.stl  left_wheel_1.stl  lid_1.stl  lidar_1.stl  microphone_1.stl  pole_1.stl  right_axis_1.stl  right_wheel_1.stl  tablet_1.stl  wheel_left_1.stl  wheel_right_1.stl
urdf/: materials.xacro  zordon.gazebo  zordon.trans  zordon.xacro
